Revert "fixed the gap for content ui"

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   /* Typical mobile screen width */
   /* max-width: 480px;  */
   margin: 0 auto;
+  padding: 1rem;
   text-align: center;
   background-color: #42404096; /* Ensure background color covers the full width */
-
 }
 
 .logo {
@@ -66,7 +66,6 @@ body {
   font-family: Arial, sans-serif;
   background-color: black;
   color: white;
-  overflow: hidden;
 }
 
 /* App container styling */
